# k8s-example

./: .env  .gitignore  Dockerfile  README.md  argocd-image-updater-config.yaml  kubeconfig  kustomization.yaml  main.tf  pyproject.toml  users.yml
.github/workflows/: docker-publish.yml
chat/: Dockerfile
chat/chat/: __init__.py
demo/: deployment.yaml
kustomize/: kustomization.yaml
talos/: controlplane.yaml  talosconfig  worker.yaml
